--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "classnames": "^2.3.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "mapbox-gl": "^2.4.1",
     "mapbox-gl-js-mock": "^1.0.2",
     "node-sass": "^4.14.1",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.1",
     "cz-conventional-changelog": "^3.3.0"
   },
   "config": {
