--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-mask": "^2.0.4",
     "react-mapbox-gl": "^5.1.1",
+    "react-redux": "^7.2.4",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-text-mask": "^5.4.3",
+    "redux": "^4.1.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
