--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,10 +14,12 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "mapbox-gl": "^2.4.1",
     "mapbox-gl-js-mock": "^1.0.2",
+    "mutationobserver-shim": "^0.3.7",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.15.3",
     "react-input-mask": "^2.0.4",
     "react-mapbox-gl": "^5.1.1",
     "react-redux": "^7.2.4",
